@@ -1,0 +1,29 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.fractions.intro.intro.view;
+
+import java.awt.BasicStroke;
+import java.awt.Color;
+import java.awt.geom.Line2D;
+
+import edu.colorado.phet.common.phetcommon.model.property.Property;
+import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
+import edu.umd.cs.piccolo.PNode;
+
+/**
+ * Node that shows a fraction (numerator and denominator and dividing line) along with controls to change the values.
+ * Layout is not normalized (top left is not 0,0)
+ *
+ * @author Sam Reid
+ */
+public class FractionNode extends PNode {
+    public FractionNode( final Property<Integer> numerator, final Property<Integer> denominator ) {
+        final PhetPPath line = new PhetPPath( new Line2D.Double( 0, 0, 150, 0 ), new BasicStroke( 12 ), Color.black );
+        addChild( line );
+        addChild( new FractionNumberNode( numerator ) {{
+            setOffset( line.getFullBounds().getCenterX() - getFullBounds().getWidth() / 2, line.getFullBounds().getY() - getFullBounds().getHeight() );
+        }} );
+        addChild( new FractionNumberNode( denominator ) {{
+            setOffset( line.getFullBounds().getCenterX() - getFullBounds().getWidth() / 2, line.getFullBounds().getY() );
+        }} );
+    }
+}
