@@ -1,6 +1,14 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.fractions.intro.intro.view;
 
+import java.awt.Color;
+import java.awt.Font;
+
+import edu.colorado.phet.common.phetcommon.model.Resettable;
+import edu.colorado.phet.common.phetcommon.model.property.Property;
+import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
+import edu.colorado.phet.common.piccolophet.nodes.ResetAllButtonNode;
+import edu.colorado.phet.common.piccolophet.nodes.kit.ZeroOffsetNode;
 import edu.colorado.phet.fractions.intro.common.view.AbstractFractionsCanvas;
 import edu.colorado.phet.fractions.intro.intro.model.FractionsIntroModel;
 
@@ -11,48 +19,38 @@ import edu.colorado.phet.fractions.intro.intro.model.FractionsIntroModel;
  */
 public class FractionsIntroCanvas extends AbstractFractionsCanvas {
 
+    public static final Font CONTROL_FONT = new PhetFont( 16 );
+
     public FractionsIntroCanvas( final FractionsIntroModel model ) {
 
-        final RepresentationToolbox toolboxNode = new RepresentationToolbox( model.representations ) {{
-            setOffset( INSET, STAGE_SIZE.getHeight() / 2 - getFullBounds().getHeight() / 2 );
+        RepresentationControlPanel representationControlPanel = new RepresentationControlPanel( new Property<RepresentationControlPanel.Fill>( RepresentationControlPanel.Fill.SEQUENTIAL ) ) {{
+            setOffset( STAGE_SIZE.getWidth() / 2 - getFullBounds().getWidth() / 2 - 100, INSET );
         }};
-        addChild( toolboxNode );
+        addChild( representationControlPanel );
 
-        //TODO: Start here to work on AbstractFractionNode
-//        addChild( new AbstractFractionNode( model.fraction, model.decimalRepresentation.enabled, new Function2<Double, Double, PNode>() {
-//            public PNode apply( Double numerator, Double denominator ) {
-//                return new ConcreteDecimalFractionNode( numerator, denominator );
-//            }
-//        } ) );
-//        addChild( new DecimalFractionNode( model.fraction, model.decimalRepresentation.enabled ) {{
-//            setOffset( ( STAGE_SIZE.getWidth() - fractionNode.getFullBounds().getMaxX() ) / 2 + fractionNode.getFullBounds().getMaxX() - getFullBounds().getWidth() / 2, fractionNode.getFullBounds().getCenterY() - getFullBounds().getHeight() / 2 );
-//        }} );
-//
-
-//
-//        addChild( new PercentNode( model.fraction, model.percentRepresentation.enabled ) {{
-//            setOffset( STAGE_SIZE.getWidth() / 2 - getFullBounds().getWidth() / 2, fractionNode.getFullBounds().getY() / 2 - getFullBounds().getHeight() / 2 );
-//        }} );
-
-//        addChild( new WordsFractionNode( model.numerator, model.denominator, model.wordsRepresentation.enabled ) {{
-//            new RichSimpleObserver() {
-//                @Override public void update() {
-//                    setOffset( STAGE_SIZE.getWidth() / 2 - getFullBounds().getWidth() / 2, STAGE_SIZE.getHeight() - getFullBounds().getHeight() - INSET * 2 );
-//                }
-//            }.observe( model.numerator, model.denominator );
-//        }} );
-//
-//        addChild( new PieSetFractionNode( model.numerator, model.denominator, model.piesRepresentation.enabled ) {{
-//            new RichSimpleObserver() {
-//                @Override public void update() {
-//                    //TODO: set location
-//                }
-//            }.observe( model.numerator, model.denominator );
-//        }} );
-
-        NumericalNode numericalNode = new NumericalNode( model ) {{
-            setOffset( STAGE_SIZE.getWidth() / 2 - getFullBounds().getWidth() / 2, STAGE_SIZE.getHeight() - getFullBounds().getHeight() );
+        ZeroOffsetNode fractionEqualityPanel = new ZeroOffsetNode( new FractionEqualityPanel( model ) ) {{
+            setOffset( STAGE_SIZE.getWidth() / 2 - getFullBounds().getWidth() / 2 - 100, STAGE_SIZE.getHeight() - getFullBounds().getHeight() );
         }};
-        addChild( numericalNode );
+        addChild( fractionEqualityPanel );
+
+        OptionsControlPanel optionsControlPanel = new OptionsControlPanel( new Property<Visualization>( Visualization.FRACTION ) );
+        addChild( optionsControlPanel );
+
+        ResetAllButtonNode resetAllButtonNode = new ResetAllButtonNode( new Resettable() {
+            public void reset() {
+                model.resetAll();
+                resetAll();
+            }
+        }, this, CONTROL_FONT, Color.black, Color.orange ) {{
+            setConfirmationEnabled( false );
+        }};
+        addChild( resetAllButtonNode );
+
+        optionsControlPanel.setOffset( STAGE_SIZE.width - optionsControlPanel.getFullBounds().getWidth() - INSET, STAGE_SIZE.height - resetAllButtonNode.getFullBounds().getHeight() - INSET - optionsControlPanel.getFullBounds().getHeight() - INSET );
+        resetAllButtonNode.setOffset( optionsControlPanel.getFullBounds().getCenterX() - resetAllButtonNode.getFullBounds().getWidth() / 2, STAGE_SIZE.height - resetAllButtonNode.getFullBounds().getHeight() - INSET );
+    }
+
+    private void resetAll() {
+
     }
 }
