@@ -1,0 +1,24 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.fractions.intro.intro.view;
+
+import java.awt.Shape;
+import java.awt.geom.Arc2D;
+import java.util.ArrayList;
+
+/**
+ * @author Sam Reid
+ */
+public class PieElement extends ShapeElement {
+    public PieElement() {
+        super(
+                new ArrayList<Shape>() {{
+                    add( new Arc2D.Double( 0, 0, DIM * 2, DIM * 2, 90, 90, Arc2D.PIE ) );
+                    add( new Arc2D.Double( 0, 0, DIM * 2, DIM * 2, 270, 90, Arc2D.PIE ) );
+                }},
+                new ArrayList<Shape>() {{
+                    add( new Arc2D.Double( 0, 0, DIM * 2, DIM * 2, 0, 90, Arc2D.PIE ) );
+                    add( new Arc2D.Double( 0, 0, DIM * 2, DIM * 2, 180, 90, Arc2D.PIE ) );
+                }}
+        );
+    }
+}
