@@ -1,0 +1,10 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.fractions.intro.intro.view;
+
+/**
+ * @author Sam Reid
+ */
+class Visualization {
+    public static Visualization FRACTION = new Visualization();
+    public static Visualization MIXED = new Visualization();
+}
